--- a/src/main/webapp/WEB-INF/views/layout.html
+++ b/src/main/webapp/WEB-INF/views/layout.html
@@ -4,8 +4,7 @@
     <meta charset="utf-8" />
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    
-    <title>Spring Customer</title>
+    <title th:text="${pageTitle}">Huy</title>
     
     <style>
         h3{background-color: blue; color: white; padding: 10px 0 10px 20px;}
